auth update with JWT